fixes for card spacing

--- a/src/css/card.css
+++ b/src/css/card.css
@@ -197,7 +197,7 @@ a.button--primary:hover {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
   gap: 1.5rem;
-  margin: 5rem 0;
+  margin: 5rem 0 2rem 0;
 }
 
 .card-grid-2 {
